--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"process": "^0.11.10"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^3.10.0",
 		"a11y-react-emoji": "^1.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
