--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-icons": "^4.6.0",
 		"react-router-dom": "^6.2.1",
 		"react-scroll": "^1.8.8",
+		"react-toastify": "^9.1.1",
 		"styled-components": "^5.3.6"
 	},
 	"browserslist": [
